--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Hello and Welcome
+Hello and Welcome to Halifax Nepalese Community page. This page is created to share some information about Halifax,
+Nova Scotia who are planning to come here.
