--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
+<h1>Nepalese Community in Halifax</h1>
 Hello and Welcome to Halifax Nepalese Community page. This page is created to share some information about Halifax,
 Nova Scotia who are planning to come here.
+
+Email:halifaxnepalese@gmail.com
